fix line height on small screens

--- a/site/src/components/accordion/Accordion.module.css
+++ b/site/src/components/accordion/Accordion.module.css
@@ -52,3 +52,9 @@
     right: 0;
   }
 }
+
+@media screen and (max-width: 309px) {
+  .accordion .summary h2 {
+    line-height: initial;
+  }
+}
